--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ShinyLdap
-Title: R Shiny Ldap Login Client (One Line, Title Case)
-Version: 0.0.1.0
+Title: R Shiny Ldap Login Client
+Version: 0.0.1.8
 Authors@R: 
     person(given = "Daniel",
            family = "S",
